# MicroModbus

./: .gitignore  LICENSE  README.md  keywords.txt  library.json  library.properties  run_tests.sh
.github/workflows/: run-tests.yml  tests.yml  unit-tests.yml
examples/AdcClientAvr/: AdcClientAvr.ino
examples/OutputCoils/: OutputCoils.ino
src/: ArduinoGpio.h  ArduinoSerial.h  BaudrateType.h  Crc16Lookup.cpp  Crc16Lookup.h  GpioBase.h  Modbus.cpp  Modbus.h  ModbusBase.h  ModbusCounterType.h  ModbusCrc16.h  ModbusHandlerBase.h  ReadHoldingRegisterHandler.cpp  ReadHoldingRegisterHandler.h  ReadInputsHandler.cpp  ReadInputsHandler.h  SerialBase.h  SerialDriver3.h  SerialModbus.cpp  SerialModbus.h  WriteMultiCoilsHandler.cpp  WriteMultiCoilsHandler.h  WriteSingleCoilHandler.cpp  WriteSingleCoilHandler.h
src/platform/avr/: ArduinoSerial.cpp
tests/: CMakeLists.txt  Crc16Lookup_test.cpp  Crc16_test.cpp  GpioFake.h  ModbusFake.h  ModbusHandlerFake.h  Modbus_test.cpp  ReadHoldingRegisterHandler_test.cpp  ReadInputsHandler_test.cpp  SerialFake.h  SerialFake_test.cpp  SerialModbus_test.cpp  WriteMultiCoilsHandler_test.cpp  WriteSingleCoilHandler_test.cpp
